Race condition where member gets stuck in startup and doesn't sync

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.2.0-rc0
    • Affects Version/s: 2.2.0-rc0
    • Component/s: Replication
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Members don't start syncing until they're in RECOVERING state. At the end of initial sync, the member is left in STARTUP state until (fairly random) calls to rs.relinquish() move it to RECOVERING. It would be better to either:

      1. Allow STARTUP members to sync or
      2. Have initial sync to finish by transitioning the member to recovering

      I don't really have a preference, but I think whichever way this goes it should be in 2.2.0.

            Assignee:
            Kristina Chodorow (Inactive)
            Reporter:
            Kristina Chodorow (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: