Transition to recovering state at the end of initial sync SERVER-6214